@@ -13,9 +13,9 @@
 	    <li>Keep your contacts organized with <em>KAddressBook</em> and
 	    import or export your contacts with nearly every address book
 	    standard as well synchronize with various groupware services.</li>
-	    <li class="special"><em>Kontact</em> is the perfect personal
-	    information management integration for you!</li>
 	</ul>
+	    <p class="special"><em>Kontact</em> is the perfect personal
+	    information management integration for you!</p>
     </div>
 </div>
 
